deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: react-chat-app
  name: react-chat-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react-chat-app
  template:
    metadata:
      labels:
        app: react-chat-app
    spec:
      containers:
          # Update with correct project name
        - image: gcr.io/final-346218/react-chat-app:latest
          imagePullPolicy: Always
          name: react-chat-app

---
apiVersion: v1
kind: Service
metadata:
  name: react-chat-app-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}' 
spec:
  type: ClusterIP
  selector:
    app: react-chat-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-chat-app-ingress
  annotations:
    # Update with a certificate name
    networking.gke.io/managed-certificates: "680-chat-app-cert"
    # Update with static ip name
    kubernetes.io/ingress.global-static-ip-name: "chat-app-ip"
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: react-chat-app-frontend-config
spec:
  defaultBackend:
    service:
      name: react-chat-app-service 
      port:
        number: 80
